# rivlib

./: .gitignore  .travis.yml  README.md
libs/rivlib/: CMakeLists.txt  FindAntTweakBar.cmake  FindFFmpeg.cmake  FindTheLib++.cmake  FindVislib.cmake  extlibs - mio.props  license.txt  readme.txt  riv.sln
libs/rivlib/rivlib/: CMakeLists.txt  libs32.props  rivlib.vcxproj  rivlib.vcxproj.filters
libs/rivlib/rivlib/include/rivlib/: api_ptr.h  broker.h  communicator.h  config.h  connection_base.h  control_connection.h  data_binding.h  image_data_types.h  image_stream_connection.h  ip_communicator.h  ip_utilities.h  node_base.h  version.h  vicci_middleware_broker.h
libs/rivlib/rivlib/src/: abstract_queued_broker.cpp  connection_base_impl.h  dllmain.cpp  element_node.cpp  element_node.h  error_log.h  ip_connection.cpp  ip_connection.h  stdafx.cpp  targetver.h  thread_scrubber.cpp  uri_utility.cpp  uri_utility.h  version.rc
libs/rivlib/rivlib/src/api/: api_ptr_base.cpp  communicator.cpp  control_connection.cpp  data_binding.cpp  image_stream_connection.cpp  ip_communicator.cpp  node_base.cpp  provider.cpp  raw_image_data_binding.cpp
libs/rivlib/rivlib/src/api_impl/: control_connection_impl.h  core_impl.cpp  core_impl.h  image_stream_connection_impl.cpp  image_stream_connection_impl.h  ip_communicator_impl.h  provider_impl.cpp  raw_image_data_binding_impl.cpp  raw_image_data_binding_impl.h
libs/rivlib/rivlib/src/data/: buffer_type.h  image_buffer_metadata.h
libs/rivlib/rivlib/src/encoder/: image_encoder_base.h  image_encoder_rgb_mjpeg.cpp  image_encoder_rgb_mjpeg.h  image_encoder_rgb_raw.h  image_encoder_rgb_zip.cpp  image_encoder_rgb_zip.h  image_request.cpp
libs/rivlib/rivlib/src/jni/: java_vm.cpp  java_vm.h  java_vm_config.cpp  java_vm_config.h
libs/rivlib/tests/: CMakeLists.txt  rivclient_protocol.reg  rivclnttest.cmdline.txt  rivprovtest.cmdline.txt
libs/rivlib/tests/c++sensor/: ReadMe.txt  c++sensor.cpp  c++sensor.vcxproj  c++sensor.vcxproj.filters  java_virtual_machine.cpp  java_virtual_machine.h  stdafx.h
libs/rivlib/tests/rivclnttest/: CMakeLists.txt  glut_application.cpp  glut_window.cpp  glut_window.h  resource.rc  rivclnttest.cpp  rivclnttest.vcxproj  rivclnttest.vcxproj.filters
libs/rivlib/tests/rivprovtest/: CMakeLists.txt  glut_application.cpp  glut_window.cpp  glut_window.h  stdafx.h  test_render_window.cpp  test_render_window.h
libs/rivlib/trunk/: CMakeLists.txt  extlibs - neoklassik.props  readme.txt
libs/rivlib/trunk/rivlib/: libs64.props
libs/rivlib/trunk/rivlib/src/: abstract_queued_broker.h  connection_base_impl.cpp  data_channel_info.cpp  data_channel_info.h  error_log.cpp  ip_connection.cpp  message_image_request.h  node.cpp  node.h  rivlib.cpp  stdafx.h  thread_scrubber.h
libs/rivlib/trunk/tests/c++sensor/: stdafx.cpp
libs/rivlib/trunk/tests/rivclnttest/: CMakeLists.txt  glut_application.cpp  glut_application.h  glut_window.cpp  riv_client_window.cpp  riv_client_window.h  (+1 more)
libs/rivlib/vsprops/: common.props
libs/thelib++/test/: CMakeLists.txt  TheResources.rc  index.cpp  main.cpp  test_ascii_file_buffer.cpp  test_ascii_file_buffer.h  testcollection.cpp  testdelegate.cpp  testdelegate.h  testdispatcher.cpp  testdispatcher.h  testipaddress.cpp  testipaddress.h  testipresolution.cpp  testipresolution.h  testmathfunctions.cpp  testmatrix.cpp  testmultisz.cpp  testmultisz.h  testperformancecounter.cpp  testperformancecounter.h  testpoint.cpp  testpolynom.h  testquaternion.cpp  testsocket.cpp  teststring.cpp  testthread.h  testthreadpool.cpp  testthreadpool.h  testtls.cpp  testtrace.cpp  testtrace.h  testvector.cpp  testvector.h  thetest++.vcxproj
libs/thelib/thelib++/: CMakeLists.txt  thelib++.autopkg
libs/thelib/thelib++/src/: already_exists_exception.cpp  argument_exception.cpp  blob.cpp  equatable.cpp  format_exception.cpp  index_out_of_range_exception.cpp  not_copyable.cpp  not_implemented_exception.cpp  not_instantiable.cpp  trace.cpp  utils.cpp
libs/thelib/thelib++/test/: ReadMe.txt  index.h  resource.h  stdafx.cpp  stdafx.h  targetver.h  test_size_and_rect.cpp  test_size_and_rect.h  testcollection.h  testfile.cpp  testfile.h  testhelper.cpp  testhelper.h  testipendpoint.cpp  testipendpoint.h  testmathfunctions.h  testpolynom.cpp  testserver.cpp  testserver.h  testsocket.h  teststring.h  testthread.cpp  testtls.h  thetest++.vcxproj.filters
libs/thelib/thelib++/thed3dtest/: simple_rendering_window.cpp  simple_rendering_window.h  stdafx.cpp  thed3dtest.vcxproj
libs/thelib/thelib++/vsprops/: TheLib.props
libs/vislib/: CMakeLists.txt  LICENCE.TXT  README.TXT
libs/vislib/Lin64/: vislibgluttest
libs/vislib/Lin64/Release/: clusterTest
libs/vislib/base/: CMakeLists.txt
libs/vislib/gl/: CMakeLists.txt
libs/vislib/glutInclude/: CMakeLists.txt  glutInclude.lin.h  glutInclude.lin.mk
libs/vislib/glutTest/: CMakeLists.txt  CamRotatorTestApp.cpp
libs/vislib/glutTest/Lin64_clib/: AbstractGlutApp.d  CamEulerRotatorTestApp.d  CamGlMatrixTest.d  CamParamObserver.d  CamRotatorTestApp.d  CamTestApp.d  FBOTest2App.d  FBOTestApp.d  GLSLGeomShaderTest.d  GLSLShaderTest.d  GlutAppManager.d  SimpleFontTest.d  StereoCamTestApp.d  glutTest.d
libs/vislib/graphics/: CMakeLists.txt
libs/vislib/math/: CMakeLists.txt
libs/vislib/net/: CMakeLists.txt
libs/vislib/sys/: CMakeLists.txt
libs/vislib/sys/src/: MessageBox.cpp  SystemInformation.cpp
libs/vislib/test/: CMakeLists.txt
libs/vislib/test/Lin64_clib/: stdafx.d  test.d  testBitmapImage.d  testReaderWriterLock.d  testVIPCStrTab.d  testasyncsocket.d  testbezier.d  testcmdlineparser.d  testcollection.d  testcomm.d  testdate.d  testdelegate.d  testdimandrect.d  testdimred.d  testdirectoryiterator.d  testdiscovery.d  testenvironment.d  testfile.d  testfloat16.d  testfrustum.d  testhash.d  testhelper.d  testinterlocked.d  testipc.d  testipv6.d  testmatrix.d  testmisc.d  testmsgdisp.d  testmultisz.d  testnamedpipe.d  testnetinfo.d  testpoint.d  testpointers.d  testpolynom.d  testpoolallocator.d  testprocess.d  testquaternion.d  testrefcount.d  testserialiser.d  testsockets.d  (+11 more)
(+3416 files in other folders)
